--- a/package.json
+++ b/package.json
@@ -1,33 +1,17 @@
 {
-  "name": "Chat",
+  "name": "chat",
   "version": "1.0.0",
-  "description": "Chat app",
-  "main": "js/index.js",
+  "description": "",
+  "main": "client/index.js",
   "scripts": {
-    "test": "npm-run-all test:*",
-    "test:html": "globstar nu-html-checker *.html",
-    "init-project": "npm install && npm-run-all init:*",
-    "init:dirs": "mkdir sass stylesheets vendor images js",
-    "init:files": "touch README.md index.html stylesheets/reset.css sass/style.scss js/script.js",
-    "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-    "build": "npm-run-all build:* test",
-    "build-clean": "rm rf css/*",
-    "build:sass": "node_modules/.bin/node-sass --output-style compact -o css sass",
-    "build:autoprefixer": "autoprefixer-cli css/style.css",
-    "build-dev:sass": "node_modules/.bin/node-sass --output-style expanded -o css sass",
-    "watch": "npm-run-all -p watch:*",
-    "watch:browsersync": "node_modules/.bin/browser-sync --watch",
-    "watch:sassprefixer": "onchange sass -- npm-run-all -p watch:sass watch:autoprefixer",
-    "watch:sass": "node_modules/.bin/node-sass --output-style compact -o stylesheets sass --watch",
-    "watch:autoprefixer": "autoprefixer-cli stylesheets/style.css",
-    "start": "http-server",
-    "babel-watch": "babel js/script.js --watch --out-file build.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --hot --env development",
+    "build": "webpack --env production"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Patryk-Rozwadowski/Chat-App"
+    "url": "git+https://github.com/Patryk-Rozwadowski/Chat-App.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -35,29 +19,20 @@
   },
   "homepage": "https://github.com/Patryk-Rozwadowski/Chat-App#readme",
   "devDependencies": {
-    "@babel/preset-env": "^7.5.4",
-    "@babel/preset-react": "^7.0.0",
-    "autoprefixer-cli": "^1.0.0",
-    "browser-sync": "^2.26.7",
-    "http-server": "^0.11.1",
-    "node-sass": "^4.11.0",
-    "npm-run-all": "^4.1.5",
-    "nu-html-checker": "^0.1.0",
-    "onchange": "^5.2.0"
-  },
-  "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "express-session": "^1.16.2",
-    "nodemon": "^1.19.1",
-    "passport": "^0.4.0",
-    "passport-google-oauth": "^2.0.0",
-    "pug": "^2.0.4",
-    "socket.io": "^2.2.0",
-    "sudoku-umd": "^1.0.1",
-    "vnu-jar": "^19.6.7"
+    "css-loader": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "optimize-js-plugin": "0.0.4",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-hot-loader": "^4.12.10",
+    "socket.io-client": "^2.2.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.8.0"
   }
 }
